# Rustar

./: Cargo.toml  README.md  index.html
src/: astar.rs  grid.rs  main.rs  node.rs
static/css/: main.css
