[package]
name = "astar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master" }
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
gloo = "0.3"